--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "capstone_frontend",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +13,6 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
-    "react-three-fiber": "^4.2.21",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
     "three": "^0.120.1"
@@ -37,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
