--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "d3-geo": "^2.0.1",
     "postprocessing": "^6.17.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,7 +16,8 @@
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "three": "^0.120.1"
+    "three": "^0.120.1",
+    "topojson-client": "^3.1.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
