--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3-geo": "^2.0.1",
-    "postprocessing": "^6.17.3",
+    "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-globe.gl": "^2.12.4",
     "react-router-dom": "^5.2.0",
-    "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
