--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-globe.gl": "^2.12.4",
+    "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
     "styled-components": "^5.2.0",
     "three": "^0.120.1",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "rbush": "^2.0.2"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
