Added leaflet third-party packages for search and heatmap (the latter will be used to visualize weather data, which is sourced from buoys directly)

--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "@testing-library/user-event": "^7.1.2",
     "d3-geo": "^2.0.1",
     "leaflet": "^1.7.1",
+    "rbush": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-globe.gl": "^2.12.4",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
+    "react-leaflet-search": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
     "styled-components": "^5.2.0",
     "three": "^0.120.1",
-    "topojson-client": "^3.1.0",
-    "rbush": "^2.0.2"
+    "topojson-client": "^3.1.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
