--- a/package.json
+++ b/package.json
@@ -3,25 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "d3-geo": "^2.0.1",
-    "leaflet": "^1.7.1",
-    "rbush": "^2.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-globe.gl": "^2.12.4",
-    "react-leaflet": "^2.7.0",
-    "react-leaflet-heatmap-layer": "^2.0.0",
-    "react-leaflet-search": "^2.0.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
+    "leaflet": "^1.7.1",
+    "react-leaflet": "^3.0.2",
+    "react-leaflet-search": "^2.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.2.1",
-    "styled-components": "^5.2.0",
-    "three": "^0.120.1",
-    "topojson-client": "^3.1.0"
+    "semantic-ui-react": "^2.0.1",
+    "rbush": "^3.0.1"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
