--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "leaflet": "^1.7.1",
+    "rbush": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "leaflet": "^1.7.1",
     "react-leaflet": "^3.0.2",
     "react-leaflet-search": "^2.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1",
-    "rbush": "^3.0.1"
+    "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
