--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-leaflet": "^3.0.5",
     "react-leaflet-search": "^2.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1"
   },
